Fix spacing to core badge

--- a/public/css/backend.scss
+++ b/public/css/backend.scss
@@ -102,6 +102,7 @@
   .env-title {
     @media (max-width: 767px) {
       margin-left: 32px;
+      margin-right: -25px;
     }
   }
 }
